@@ -16766,9 +16766,10 @@ function $image_nocache(res) {
 		options.type = U.getContentType(image.outputType);
 
 		// Loaded from FileStorage
-		if (image.custom)
+		if (image.custom) {
 			options.stream = Fs.createReadStream(image.filename, { fd: image.fd, start: image.start });
-		else
+			options.stream.$totalfd = image.fd;
+		} else
 			options.stream = image;
 
 		F.stats.response.image++;
@@ -16821,8 +16822,10 @@ function $image_stream(exists, size, isFile, stats, res) {
 
 	PATH.verify('temp');
 
-	if (options.stream.custom)
+	if (options.stream.custom) {
 		options.stream = Fs.createReadStream(options.stream.filename, { fd: options.stream.fd, start: options.stream.start });
+		options.stream.$totalfd = options.stream.fd;
+	}
 
 	var image = framework_image.load(options.stream);
 	options.make.call(image, image, res);
